# search_docnum

./: .dockerignore  .gitignore  README.md  _llm_export.md  docker-compose.yml  main.py  pyproject.toml
.qwen/commands/: speckit.plan.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docker/: Dockerfile  docker-compose.yml
docs/: quickstart.md  Реестр СИ ЦПС 5.5 v5.0 от 29.09.2025 (после МКАИР) 50 строк.xlsx  Реестр СИ ЦПС 5.5 v5.0 от 29.09.2025 (после МКАИР).xlsx
requirements/: base.txt  dev.txt  prod.txt
results/: report_00c8c4a7-4f87-4587-ba95-9a4c7b35b615.json  report_01671863-38e2-4ca7-9213-9c56c4b35c63.xlsx  report_03b51375-9c84-4d95-9795-91f4b4d10557.json  report_03b51375-9c84-4d95-9795-91f4b4d10557.xlsx  report_0b88bf33-d6b5-410a-991c-8a44211086ef.json  report_0b88bf33-d6b5-410a-991c-8a44211086ef.xlsx  report_119aecaf-9aaf-40a9-a951-9891ae855c37.json  report_119aecaf-9aaf-40a9-a951-9891ae855c37.xlsx  report_136b081f-e6ef-4c19-bdc2-20da68aa5517.json  report_14565175-9f6e-4a9e-b399-e04238918e0d.json  report_14565175-9f6e-4a9e-b399-e04238918e0d.xlsx  report_1726dcdc-d339-45ac-b925-bb09313c4022.json  report_1726dcdc-d339-45ac-b925-bb09313c4022.xlsx  report_1c026633-965e-42b4-a769-a0d01287af2a.json  report_1c026633-965e-42b4-a769-a0d01287af2a.xlsx  report_23d1e9ea-5e13-486b-ba7d-01df4b5ec8bc.json  report_23d1e9ea-5e13-486b-ba7d-01df4b5ec8bc.xlsx  report_244ffe83-ca17-4fe7-9359-c54c8f078977.json  report_244ffe83-ca17-4fe7-9359-c54c8f078977.xlsx  report_2612d249-bc3c-44be-b39f-eaeea6380b2a.json  report_2612d249-bc3c-44be-b39f-eaeea6380b2a.xlsx  report_27eacc63-b227-4475-a8ab-d0cdc8e3ff07.json  report_27eacc63-b227-4475-a8ab-d0cdc8e3ff07.xlsx  report_29eecd41-a82a-4fb3-a294-f172fed302b5.json  report_29eecd41-a82a-4fb3-a294-f172fed302b5.xlsx  report_2be774ee-4cd5-4919-8a1f-8e9861bd053f.json  report_367c87ff-d125-4b52-ad7a-18baa62188cd.json  report_367c87ff-d125-4b52-ad7a-18baa62188cd.xlsx  report_385342c0-ec2f-4843-add5-5d6f0bf12a5b.json  report_385342c0-ec2f-4843-add5-5d6f0bf12a5b.xlsx  report_3af54dd6-1924-4d7c-b9ff-2ceb9a0056ec.json  report_3af54dd6-1924-4d7c-b9ff-2ceb9a0056ec.xlsx  report_3d190342-7e1e-4f6a-bb3c-c48fb7734e72.json  report_4101a330-c2c1-4aa3-bf6f-b8576b4b4d5b.xlsx  report_462ba099-9044-44be-98be-401233956f77.json  report_462ba099-9044-44be-98be-401233956f77.xlsx  report_4ad6c9f3-c096-4b23-9880-5de708d0d272.json  report_526a7630-6e9e-4cf1-893e-a31f15d2f60c.json  report_526a7630-6e9e-4cf1-893e-a31f15d2f60c.xlsx  report_52ff46bb-6971-43aa-8469-6cf277eea6e9.json  (+77 more)
search_docnum/: __init__.py  __main__.py  core.py
specs/001-rest-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: tasks.py
src/api/: main.py
src/config/: settings.py
src/models/: arshin_record.py  excel_data.py  processing_task.py  report.py
src/services/: arshin_client.py  data_processor.py  excel_parser.py  file_validator.py  progress_notifier.py  report_generator.py
src/templates/: base.html  results.html  status.html  upload.html
src/utils/: date_utils.py  logging_config.py  validators.py  web_utils.py
tests/: conftest.py
tests/contract/: test_arshin_api.py
tests/integration/: test_api_endpoints.py  test_external_integration.py
tests/unit/: test_arshin_client.py  test_excel_parser.py  test_report_generator.py
uploads/: 2a9e9532-9454-44f7-9635-19b0e197e9ae_Реестр СИ ЦПС 5.5 v5.0 от 29.09.2025 после МКАИР.xlsx  2ebb9b65-ca89-49c4-8275-c7653d4feb20_Реестр СИ ЦПС 5.5 v5.0 от 29.09.2025 после МКАИР.xlsx
(+13 files in other folders)
